--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="/dist/build.js"></script>
+    <script src="/dist/vendor.bundle.js"></script>
+    <script src="/dist/main.bundle.js"></script>
   </body>
 </html>
